# avd-masters

./: .env.example  .gitignore  CONTRIBUTING.md  Dockerfile  FEATURES.md  LICENSE  MEGA-FEATURES.md  README.md  demo.py  pyproject.toml  render_demo.py  requirements.txt  run.py
avd_masters/: __init__.py  __main__.py  alerting.py  catalog.py  config.py  cost.py  discovery.py  engine.py  forecasting.py  governance.py  midas.py  models.py  optimizer.py  profiles.py  recommendations.py  signals.py  sku_discovery.py  toolkit.py  types.py  utils.py
avd_masters/analysis/: base.py  citrix.py  report.py
avd_masters/collectors/: avd.py  base.py  citrix.py  gpu.py  rds.py
avd_masters/dashboard/: tui.py
avd_masters/exporters/: prometheus.py
avd_masters/models/: metrics.py
avd_masters/notifiers/: teams.py
config/: config.yaml.example
docs/: _config.yml  architecture.md  catalog.md  configuration.md  consulting-positioning.md  getting-started.md  index.html  index.md  precision-cost-attribution.md  toolkit.md
docs/assets/: style.css
examples/: finops_demo.py  manage_demo.py
grafana/: avd_masters_dashboard.json  dashboard_gen.py  vdm_dashboard.json
groky/: __init__.py  catalog.py  cost.py  forecasting.py  governance.py  models.py  optimizer.py  types.py
prometheus/: docker-compose.yml  prometheus.yml.example
prometheus/alertmanager/: alertmanager.yml
prometheus/alerts/: avd_masters.yml  vdm.yml
tests/: fixtures.py  test_analysis.py
vdm/: __init__.py  __main__.py  config.py  engine.py
vdm/analysis/: avd.py  citrix.py  common.py  gpu.py  rds.py  report.py
vdm/collectors/: avd.py  base.py  citrix.py  gpu.py  rds.py
vdm/dashboard/: gpu_panel.py  tui.py
vdm/exporters/: prometheus.py
vdm/models/: gpu.py  metrics.py
vdm/notifiers/: base.py  console.py  (+1 more)
(+2 files in other folders)
