[project]
name = "groky"
version = "2.0.0"
description = "GROKY 2.0 — The ruthless, agentless GPU monitor for Azure Virtual Desktop. Direct hardware truth. Zero Azure Monitor tax. Built different."
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "Grok + you"}
]

dependencies = [
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.29.0",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.2.0",
    "pyyaml>=6.0.1",
    "azure-identity>=1.16.0",
    "azure-mgmt-desktopvirtualization>=1.0.0",
    "azure-mgmt-compute>=31.0.0",
    "azure-mgmt-resource>=23.0.0",
    "pywinrm>=0.4.3",
    "paramiko>=3.4.0",
    "apscheduler>=3.10.4",
    "numpy>=1.26.0",
]

[project.optional-dependencies]
dev = ["ruff", "mypy", "pytest"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.mypy]
python_version = "3.11"
strict = true
